--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vis-imation</title>
+    <style>
+        .cover {
+            width: 100%;
+            height: auto;
+            background-position: center;
+            background-size: cover;
+        }
+        .landing-text {
+            text-align: center;
+        
+        }
+    </style>
 </head>
 
 <body>
-    <img src="assests/images/coding-science.gif" alt="Bridging the gap between coding and buisness needs" />
+    <div class="cover">
+       <img src="assests/images/coding-science.gif" alt="Bridging the gap between coding and buisness needs" /> 
+    </div>
 
-    <h1>VIS-IMATION</h1>
-    <p>"Logic will get you from A to B. Imagination will take you Everywhere."<br />
-     - Albert Einstein</p>
+    
+    <h1 class="landing-text">VIS-IMATION</h1>
+     <p class="landing-text">"Logic will get you from A to B. Imagination will take you Everywhere."<br />
+         - Albert Einstein</p>
 </body>
 
 </html>
