--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
             background-size: cover;
         }
         .landing-text {
-            text-align: center;
-        
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
 
 <body>
     <div class="cover">
-       <img src="assests/images/coding-science.gif" alt="Bridging the gap between coding and buisness needs" /> 
+       <img src="assests/images/coding-science.mp4" alt="Bridging the gap between coding and buisness needs" /> 
     </div>
 
     
     <h1 class="landing-text">VIS-IMATION</h1>
-     <p class="landing-text">"Logic will get you from A to B. Imagination will take you Everywhere."<br />
-         - Albert Einstein</p>
 </body>
 
 </html>
